break long words to avoid horizontal scrolling

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@ html {
   background-image: linear-gradient(rgba(255, 231, 180, 0.45), rgba(255, 231, 180, 0.45)), url(~/static/assets/images/no.jpg);
   background-color: rgb(255, 231, 180);
   overscroll-behavior: none;
+  word-break: break-word;
 }
 
 body {
